--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -1166,6 +1166,106 @@ Therefore, the full potential of leveraging discrete tokens for SLU remains larg
 
 </td></tr></table>
 
+### Speech Generation
+
+#### Motivation
+
+<table><tr><td width="50%">
+
+Discrete tokens have catalyzed a paradigm shift in speech generation, with TTS being the most representative application.
+In TTS systems, discrete tokens are usually used as intermediate features that bridge the acoustic model (text-to-token) and the vocoder or codec decoder (token-to-wav).
+
+There are two major advantages of applying discrete tokens in TTS:
+
+- \textbf{Easier training objectives}. Discrete tokens replace the original spectrogram-based regression task with a classification task~\cite{VQTTS}, which can be much easier.
+This also offers a better balance between acoustic models and vocoders, since texts are closer to discrete speech tokens than frequency-domain features.
+- \textbf{Better use of decoder-only language models}.
+Decoder-only language models have shown remarkable success in natural language generation.
+After discretization, speech can also be autoregressively generated under the same paradigm.
+This offers huge potential in leveraging the in-context learning and scaling capabilities of language models to achieve zero-shot high-fidelity TTS~\cite{valle}.
+
+Other generative tasks, such as singing voice synthesis and speech editing, can similarly benefit from the advantages of discrete tokens observed in TTS.
+
+For voice conversion (VC), using discrete tokens as content representations can simplify the process to a token vocoder~\cite{guo2024vec2wav}, when timbre information is effectively removed from the tokens.
+Tasks like speech to speech translation~\cite{lee2022direct,zhang2021uwspeech}, speech enhancement~\cite{wang2024selm,liu2024joint} and target speaker extraction~\cite{tang2024tselm} can also be enhanced through language modeling on discrete tokens.
+
+</td><td>
+
+</td></tr></table>
+
+#### Autoregressive TTS
+
+<table><tr><td width="50%">
+
+Autoregressively predicting the next VQ index of discrete speech tokens is first proposed in VQTTS~\cite{VQTTS}, which uses an LSTM conditioned on Transformer representations to generate vq-wav2vec~\cite{vq-wav2vec} semantic tokens.
+A discrete token vocoder converts the tokens to waveforms with the assistance of handcrafted prosody features.
+
+VQTTS achieves state-of-the-art TTS quality at that time, and shows promising performance in speaker-adaptive TTS~\cite{TNVQTTS,DSETTS,limmits23} and expressive TTS~\cite{liu2024storytts}.
+
+Subsequently, decoder-only TTS models using neural audio codecs have made tremendous success in zero-shot TTS starting from VALL-E~\cite{valle}.
+VALL-E contains an autoregressive (AR) model and non-autoregressive (NAR) model, both of which generate EnCodec~\cite{encodec} RVQ tokens.
+The AR model performs next-token prediction on the first RVQ layer conditioned on text.
+The NAR model predicts the $n+1$-th RVQ tokens given the text, all EnCodec tokens from the speaker reference, and the previous $n$ RVQ layers.
+
+VALL-E employs a concise design in which text and speaker references serve as ``prompts'' for a language model.
+It achieves remarkable zero-shot TTS performance when trained on 60k hours of speech.
+Later, methods have been proposed to improve generation robustness~\cite{song2024ella,xin2024rall,han2024vall,du2024vall,wang2024attention,chen2024vall}, efficiency~\cite{song24b_interspeech}, style control~\cite{kim2023sc,lyth2024natural,ji2024textrolspeech}, and to incorporate LLMs~\cite{hao2023boosting,shen2024get}.
+
+Besides using an NAR model to predict the rest RVQ layers, alternate modeling strategies have been proposed, such as hierarchical modeling~\cite{yang2024uniaudio} and token interleaving patterns~\cite{musicgen,voicecraft}.
+
+Semantic tokens are also introduced to cooperate with acoustic codecs~\cite{kharitonov2023speak,vectokspeech,shen2024get,yang2024interleaved}, which might decrease the modeling difficulty since they bridge the gap between texts and acoustics and usually require only a single token stream.
+
+Numerous industry-level large-scale TTS systems have been produced in this autoregressive TTS paradigm, such as XTTS~\cite{casanova2024xtts}, BASE-TTS~\cite{lajszczak2024base}, Seed-TTS~\cite{seedtts}, CosyVoice~\cite{du2024cosyvoice,cosyvoice2}, Fish-Speech~\cite{liao2024fish}, etc.
+
+</td><td>
+
+</td></tr></table>
+
+#### Non-Autoregressive TTS
+
+<table><tr><td width="50%">
+
+While autoregressive modeling is the current mainstream of TTS with discrete tokens, non-autoregressive models also exist.
+These models either treat the code-vectors as continuous features~\cite{shen2024naturalspeech2}, or directly generate discrete tokens by masked prediction~\cite{wang2024maskgct} or discrete diffusion models~\cite{du2024unicats,facodec}.
+
+These non-autoregressive methods are naturally more robust than autoregressive methods in inference, and also supports speech editing.
+
+</td><td>
+
+</td></tr></table>
+
+#### Unified Speech Generation
+
+<table><tr><td width="50%">
+
+The language modeling approach of discrete tokens allows a unified generation framework for multiple tasks.
+It suffices to use a task identifier to condition the unified language model.
+For example, \cite{vallex,wang2024speechx} extends VALL-E with more tasks like cross-lingual TTS, S2ST, speech editing, etc.
+
+UniAudio~\cite{yang2024uniaudio} supports 11 speech and audio generation tasks within a single hierarchical Transformer model.
+
+Prompt tuning upon a spoken language model has also been explored in \cite{wu2023speechgen} for efficient, transferable and versatile generation.
+These efforts demonstrate the potential of a large-scale foundation model for generation.
+
+</td><td>
+
+</td></tr></table>
+
+#### Limitations
+
+<table><tr><td width="50%">
+
+In contrast to discrete tokens, another emerging framework for speech generation is diffusion or flow matching-based models, including non-autoregressive models \cite{lee2023hierspeech++,le2024voicebox,liu2024e1,chen2024f5} or autoregressive models \cite{meng2024autoregressive,liu2024autoregressive,zhu2024autoregressive,turetzky2024continuous,jia2025ditar}.
+They generate continuous features, and some even eliminate the need for forced alignments in non-autoregressive generation.
+Owing to the strong capability of diffusion and flow matching algorithms, they also have remarkable generation fidelity, diversity and controllability.
+They can have a higher upper bound for speech quality and intelligibility, as they inherently avoid quantization errors.
+In comparison, discrete token-based speech generation models usually fall short in generation robustness.
+Therefore, there is an ongoing debate between discrete and continuous representations for speech generation.
+
+</td><td>
+
+</td></tr></table>
+
 ## References: 参考文献
 
 [^9164982]:
