--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -1207,7 +1207,7 @@ VALL-E contains an autoregressive (AR) model and non-autoregressive (NAR) model,
 The AR model performs next-token prediction on the first RVQ layer conditioned on text.
 The NAR model predicts the $n+1$-th RVQ tokens given the text, all EnCodec tokens from the speaker reference, and the previous $n$ RVQ layers.
 
-VALL-E employs a concise design in which text and speaker references serve as ``prompts'' for a language model.
+VALL-E employs a concise design in which text and speaker references serve as "prompts" for a language model.
 It achieves remarkable zero-shot TTS performance when trained on 60k hours of speech.
 Later, methods have been proposed to improve generation robustness~\cite{song2024ella,xin2024rall,han2024vall,du2024vall,wang2024attention,chen2024vall}, efficiency~\cite{song24b_interspeech}, style control~\cite{kim2023sc,lyth2024natural,ji2024textrolspeech}, and to incorporate LLMs~\cite{hao2023boosting,shen2024get}.
 
@@ -1350,6 +1350,164 @@ There are also efforts to streamingly synthesize speech signals directly based o
 Overall, TG-SLMs' task decomposition is effective and flexible.
 The SLU sub-procedure can handle both continuous and discrete representations, and single-layer discrete tokens simplify the training and inference of the TTS sub-procedure.
 However, unlike TF-SLMs, TG-SLMs rely heavily on text as an intermediary in the TTS sub-procedure, which may overlook paralinguistic information such as emotion, prosody, and environmental context from the previous input, resulting in less coherent and natural response. Additionally, the lack of high-quality annotated conversational data and concerns over security pose significant challenges for the future development of TG-SLMs.
+
+</td><td>
+
+</td></tr></table>
+
+## 7·Challenges and Future Directions
+
+<table><tr><td width="50%">
+
+Current discrete speech tokens still exhibit certain limitations and challenges that need to be addressed.
+In this section, we summarize the existing challenges in this field and outline the corresponding future directions.
+
+</td><td>
+
+</td></tr></table>
+
+### Low-Bitrate Tokens
+
+<table><tr><td width="50%">
+
+For bitrates of tokens, factors $Q$ (number of quantizers) and $F$ (frame rate) play a more important role than $V$ (vocabulary size).
+Using only a single codebook is very beneficial for language modeling, since speech can be truly regarded as another "natural language" then.
+However, there is usually a noticeable degradation in reconstruction performance in these tokens.
+A critical problem lies in how to better utilize the highly-compact discrete VQ representation space.
+For $F$, the frame rates of most tokens are still much greater than text sequences, which can significantly influence the syntactic and semantic modeling capability of language models~\cite{wang2024whyspeech}.
+However, reducing the frame rate of tokens may also lead to decreased intelligibility in reconstructed speech.
+A lower $V$ is also desirable for language modeling and length reduction by BPE.
+
+For acoustic tokens, it remains an open problem what the lower bound of bitrate and the frame rate $F$ are, and how to reach them.
+More powerful network architectures or advanced VQ strategies should be helpful, and reducing temporal redundancy by disentangling global information is also a promising solution.
+
+</td><td>
+
+</td></tr></table>
+
+### Streaming Ability and Efficiency
+
+<table><tr><td width="50%">
+
+Real-time applications require tokens to be stream-able both in encoding and decoding.
+For most CNN-based acoustic tokens, achieving this is easy due to their fixed receptive fields.
+For acoustic tokens with Transformer blocks, an attention mask is necessary.
+However, most SSL models employ a non-causal Transformer architecture, which makes semantic tokens derived from these models unsuitable for real-time tokenization.
+It remains unclear how much performance degradation would result from transitioning to causal architectures in both SSL models and token vocoders.
+
+Streaming ability also poses a requirement for model efficiency.
+Currently, larger acoustic token models are reported to achieve better performance with lower bitrates~\cite{xin2024bigcodec,parker2024scalingtransformerslowbitratehighquality}, but at a cost of efficiency.
+In addition to reducing the bitrate of the tokenized codes, the efficiency of tokenizers must also be balanced for real-time applications.
+
+</td><td>
+
+</td></tr></table>
+
+### Disentanglement in Acoustic Tokens
+
+<table><tr><td width="50%">
+
+Whether disentanglement should be incorporated into acoustic tokens depends on the specific application.
+If reconstruction is the major objective, disentanglement may not be necessary.
+However, disentanglement can help reduce the bitrate in time-varying tokens, ensure anonymity during transmission, reduce downstream modeling complexity, and achieve independent control of difference voice properties.
+There are currently only limited efforts on decoupled acoustic tokens, and the decoupling effect is still suboptimal or causing a negative impact on reconstruction quality.
+More advanced techniques for information decoupling should be considered in the future.
+
+</td><td>
+
+</td></tr></table>
+
+### Variable Frame Rate Tokens
+
+<table><tr><td width="50%">
+
+Current speech tokens are usually designed at a fixed temporal rate, while the underlying linguistic units in speech are highly variable-rate.
+This can offer an important insight and potential of further reducing the bitrate, and more importantly, closing the gap between speech tokens and natural language units for downstream tasks.
+So far, only semantic tokens have explored varying temporal rates, but with a complicated algorithm or iterative training process~\cite{baade2024syllablelm, cho2024sylber}.
+More explorations need to be taken on variable frame rate acoustic tokens and the benefit of these variable frame rate tokens in practice.
+
+</td><td>
+
+</td></tr></table>
+
+### Combining Acoustic and Semantic Tokens
+
+<table><tr><td width="50%">
+
+Given the distinct properties of acoustic and semantic tokens, a natural question arises:
+Can a representation space contain rich speech understanding capabilities while also reconstructing acoustic details at a decent level?
+It is promising to incorporating semantic information from SSL models to enhance the reconstruction and downstream modeling performance of acoustic tokens~\cite{zhang2024speechtokenizer,ye2024codec,liu2024semanticodec}.
+This approach should be further optimized to achieve lower bitrates and even a single codebook.
+
+</td><td>
+
+</td></tr></table>
+
+### Paralinguistics in Semantic Tokens
+
+<table><tr><td width="50%">
+
+While speaker information is generally considered irrelevant for semantic content, prosody serves as a crucial component of paralinguistic information.
+Semantic tokens derived through simple clustering methods are likely to discard both speaker information and prosody, harming downstream models' ability to handle rich emotions, tones, singing voices, and non-verbal vocalizations that convey semantic meaning.
+This problem can be partially mitigated by certain VQ approaches that encode more information from SSL features~\cite{huang2023repcodec,shi24h_interspeech,mousavi2024should}, but at a cost of more codebooks and higher bitrates.
+Supervised tokenization could also be considered for directly guiding tokens toward paralinguistic information.
+However, current supervised tokens rely solely on ASR, which is insufficient for preserving prosody.
+
+</td><td>
+
+</td></tr></table>
+
+### Noise Preservation vs Noise Robustness
+
+<table><tr><td width="50%">
+
+Similar to disentanglement in acoustic tokens, the inclusion or exclusion of background noise and channel effects in the tokens also depends on the specific application.
+Most acoustic tokens are designed to capture noise, but their performance across various types of noise and channel effects remains unclear.
+This issue extends beyond speech and relates to the broader scope of neural \textit{audio} codecs.
+On the other hand, denoising~\cite{zeghidour2021soundstream} is also an interesting application of acoustic tokens that leverages the limited VQ space.
+If noise is considered undesirable in tokens, such as semantic tokens, then the robustness against various types of signal perturbations needs to be investigated.
+
+</td><td>
+
+</td></tr></table>
+
+### Timbre Control in Token Vocoders
+
+<table><tr><td width="50%">
+
+For semantic tokens and speaker-decoupled acoustic tokens, token vocoders should be responsible for controlling speaker timbre.
+Currently, both GAN-based token-to-wav vocoders~\cite{guo2024vec2wav} and flow matching-based token-to-mel models~\cite{du2024cosyvoice} have demonstrated strong timbre control capabilities.
+It remains an open question whether the upper bound of the former method can be improved by training on large-scale datasets, as is done with the latter.
+Also, the timbre controllability of in-the-wild reference prompts with various acoustic conditions should be further investigated.
+
+</td><td>
+
+</td></tr></table>
+
+### Adaptivity
+
+<table><tr><td width="50%">
+
+The diverse application scenarios range from transmission to various speech processing tasks and speech LLMs.
+It is challenging to develop a single speech tokenizer that meets all the requirements of these scenarios.
+However, adaptivity remains a desirable property, where the tokenizer is expected to adapt to different scenarios given a task prompt or a few data examples.
+If such tokens exist and the aforementioned challenges are well addressed, then we may be close to achieving a universal speech tokenizer.
+
+</td><td>
+
+</td></tr></table>
+
+## 8·Conclusion
+
+<table><tr><td width="50%">
+
+Recently, discrete speech tokens have emerged as a rapidly evolving field and a core research direction in the speech LLM era. These tokens encode acoustic or semantic information into a compact discrete representation space, catalyzing the fusion of LLMs and speech processing.
+Existing discrete speech tokens show rich diversity in model architecture and optimization objectives.
+In this review, we provide a comprehensive introduction to representative categories of discrete speech tokens, summarizing their motivations and limitations.
+We conduct a unified analysis of reconstruction and voice conversion across different token types to highlight their unique characteristics.
+We also review efforts to apply discrete tokens to speech processing tasks, including spoken language understanding, speech generation, and spoken language modeling.
+Finally, we explore future directions for discrete speech tokenization methods.
+We hope this review lays a solid foundation for future research in speech technology.
 
 </td><td>
 
