--- a/Models/SpeechLM/ST2S/2024.01.25_VALL-T.md
+++ b/Models/SpeechLM/ST2S/2024.01.25_VALL-T.md
@@ -20,14 +20,16 @@
   - [Github](https://github.com/cpdu/vallt)
   - [Demo](http://cpdu.github.io/vallt)
 - 文件:
-  - [ArXiv](_PDF/2401.14321v4__VALL-T__Decoder-Only_Generative_Transducer_for_Robust_and_Decoding-Controllable_Text-to-Speech.pdf)
+  - [ArXiv](../_PDF/2401.14321v4__VALL-T__Decoder-Only_Generative_Transducer_for_Robust_and_Decoding-Controllable_Text-to-Speech.pdf)
   - [Publication] #TODO
 
 </details>
 
 ## Abstract·摘要
 
-Recent TTS models with decoder-only Transformer architecture, such as [SPEAR-TTS (2023)](../SpeechLM/2023.02.07_SPEAR-TTS.md) and [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), achieve impressive naturalness and demonstrate the ability for zero-shot adaptation given a speech prompt.
+<table><tr><td width="50%">
+
+Recent TTS models with decoder-only Transformer architecture, such as **SPEAR-TTS** and **VALL-E**, achieve impressive naturalness and demonstrate the ability for zero-shot adaptation given a speech prompt.
 However, such decoder-only TTS models lack monotonic alignment constraints, sometimes leading to hallucination issues such as mispronunciation, word skipping and repeating.
 To address this limitation, we propose ***VALL-T***, a generative Transducer model that introduces shifting relative position embeddings for input phoneme sequence, explicitly indicating the monotonic generation process while maintaining the architecture of decoder-only Transformer.
 Consequently, ***VALL-T*** retains the capability of prompt-based zero-shot adaptation and demonstrates better robustness against hallucinations with a relative reduction of 28.3% in the word error rate.
@@ -35,12 +37,26 @@ Furthermore, the controllability of alignment in ***VALL-T*** during decoding fa
 It also enables the synthesis of lengthy speech by utilizing an aligned context window.
 The audio samples are available at http://cpdu.github.io/vallt.
 
+</td><td>
+
+最近, 采用仅解码器 Transformer 架构的文本转语音模型, 如 **SPEAR-TTS** 和 **VALL-E**, 在自然性方面取得了显著进展, 并且展示了在给定语音提示的情况下进行零样本适应的能力.
+然而, 这些仅解码器的TTS模型缺乏单调对齐约束, 有时会导致幻觉问题, 如发音错误、单词跳过或重复等.
+
+为了解决这一限制, 我们提出了 ***VALL-T***, 一种生成型Transducer模型, 它为输入的音素序列引入了相对位置嵌入的位移, 从而明确表示单调生成过程, 同时保持仅解码器Transformer的架构.
+因此, ***VALL-T*** 保留了基于提示的零样本适应能力, 并且在抗幻觉方面表现得更为稳健, 单词错误率相对减少了28.3%.
+
+此外, ***VALL-T*** 在解码过程中对齐的可控性使其能够使用未转录的语音提示, 甚至是在未知语言中.
+它还通过利用对齐的上下文窗口, 能够合成较长的语音.
+
+音频样本可以通过访问 [http://cpdu.github.io/vallt](http://cpdu.github.io/vallt) 获取.
+
+</td></tr></table>
 
 ## 1·Introduction·引言
 
 Text-to-speech (TTS) synthesis is a monotonic sequence-to-sequence task, maintaining a strict order between the input phoneme sequence and the output speech sequence.
 Moreover, the output speech sequence is at frame-level and one phoneme may correspond to multiple frames of speech, so the output sequence is significantly longer than its corresponding input phoneme sequence.
-Mainstream neural text-to-speech models, such as [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md); GradTTS (Popov et al., 2021) and VoiceFlow (Guo et al., 2024), integrate a duration prediction module.
+Mainstream neural text-to-speech models, such as **FastSpeech2**; GradTTS (Popov et al., 2021) and VoiceFlow (Guo et al., 2024), integrate a duration prediction module.
 Prior to training, the target duration is conventionally derived using the Viterbi forced alignment algorithm.
 During training, this module is optimized by minimizing the mean square error (MSE) between predicted and target durations.
 In the inference phase, the duration predictor module predicts the duration for each input phoneme, establishing the alignment between the input and output sequences accordingly.
@@ -48,8 +64,8 @@ The encoded input phoneme sequence is then expanded to the frame level based on 
 This mechanism enforces monotonic alignment constraints on the sequence-to-sequence process, ensuring robustness in the synthesis of speech.
 
 Over the past two years, utilizing discrete speech tokens for speech generation is proposed in GSLM (Lakhotia et al., 2021) and VQTTS (Du et al., 2022), paving the way for integrating cutting-edge language modeling techniques into TTS systems.
-Inspired by exceptional strides in natural language processing driven by decoder-only large Transformer models like GPT 3 (Brown et al., 2020) and the [LLaMA2 (2023)](../TextLM/2023.07.18_LLaMA2.md), [Tortoise-TTS (2023)](../Diffusion/2023.05.12_TorToise-TTS.md), [SPEAR-TTS (2023)](../SpeechLM/2023.02.07_SPEAR-TTS.md), [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) and LauraGPT (Wang et al., 2023b) adopted the decoder-only architecture for TTS, achieving remarkable naturalness.
-[SPEAR-TTS (2023)](../SpeechLM/2023.02.07_SPEAR-TTS.md) and [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) also have the ability to perform zero-shot speaker adaptation through Auto-Regressive (AR) continuation from a given speech prompt.
+Inspired by exceptional strides in natural language processing driven by decoder-only large Transformer models like GPT 3 (Brown et al., 2020) and the **LLaMA2**, **Tortoise-TTS**, **SPEAR-TTS**, **VALL-E** and LauraGPT (Wang et al., 2023b) adopted the decoder-only architecture for TTS, achieving remarkable naturalness.
+**SPEAR-TTS** and **VALL-E** also have the ability to perform zero-shot speaker adaptation through Auto-Regressive (AR) continuation from a given speech prompt.
 Furthermore, these decoder-only TTS models, unlike traditional neural TTS model, circumvent explicit duration modeling and the requirement for phoneme durations obtained prior to training.
 This characteristic offers convenience and simplifies training process, especially when training on large scale datasets.
 However, the implicit duration modeling within these systems lacks the monotonic alignment constraints, often leading to hallucination issues like mispronunciation, word skipping and repeating.
@@ -73,7 +89,7 @@ To the best of our knowledge, this is the first work that implements Transducer 
 ### 2.1·Decoder-Only Zero-Shot TTS with Speech Prompts·使用语音提示的仅解码器的零样本TTS
 
 Zero-shot TTS refers to the ability to generate speech in the voice of an unseen speaker given only a short sample of that speaker’s speech.
-Decoder-only TTS models, such as [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), are able to perform zero-shot speaker adaptation through auto-regressive continuation from the target speaker’s sample.
+Decoder-only TTS models, such as **VALL-E**, are able to perform zero-shot speaker adaptation through auto-regressive continuation from the target speaker’s sample.
 Therefore, the speech sample of the target speaker is also named speech prompt.
 
 Specifically, in the training process, illustrated in Fig.01(a), the phoneme and speech sequences are concatenated along the time axis and fed into a decoder-only Transformer model.
@@ -119,11 +135,11 @@ We discuss the training and inference details below.
 ### 3.1·Training·训练
 
 We use a decoder-only architecture for ***VALL-T***.
-Similar to the approach in the previous work [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), we concatenate the input phoneme and output speech tokens along the time axis and present them to the model as a unified sequence.
+Similar to the approach in the previous work **VALL-E**, we concatenate the input phoneme and output speech tokens along the time axis and present them to the model as a unified sequence.
 Unlike traditional RNN and LSTM architectures, the Transformer lacks a specific time order for input tokens, relying instead on position embeddings to indicate their positions.
 The position indices for the input sequence range from0to T − 1and are converted into position embeddings through a sinusoidal function (Vaswani et al., 2017).
 Similarly, the output sequence adopts position indices from0toU, including an additional `<sos>` token at the beginning.
-Following [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), we utilize a triangular attention mask for the output sequence, facilitating auto-regressive generation.
+Following **VALL-E**, we utilize a triangular attention mask for the output sequence, facilitating auto-regressive generation.
 This mask ensures that each speech token attends to only previously generated tokens, maintaining a proper sequential order in the output.
 
 Beyond the typical absolute position indices starting from 0, we introduce additional relative position indices in ***VALL-T*** for input tokens.
@@ -150,7 +166,7 @@ We iteratively conduct the above process until the appearance of \varnothing for
 Since the model is encouraged to generate speech tokens for the phoneme assigned relative position0by Transducer loss during training, the step-by-step shifting operation during decoding facilitates the monotonic generation process and consequently enhance the robustness against hallucination.
 
 Next, we consider the integration of the speech prompt for zero-shot speaker adaptation.
-Following the approach used in [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), the phoneme transcription of the speech prompt is placed at the start of the input sequence, while the speech prompt itself is positioned at the beginning of the output sequence.
+Following the approach used in **VALL-E**, the phoneme transcription of the speech prompt is placed at the start of the input sequence, while the speech prompt itself is positioned at the beginning of the output sequence.
 The two sequences are followed by the input phonemes to be generated and their corresponding output speech tokens respectively.
 Given that the speech prompt are provided, we assign the relative position 0 to the first phoneme right after the prompt transcription, as shown in Fig.03, and perform speech continuation.
 Likewise, the relative positions undergo a shift each time \varnothing emerges, repeating until the generation for the final phoneme is completed.
@@ -185,11 +201,11 @@ Hence, by leveraging aligned context window, ***VALL-T*** consistently maintains
 
 ### 4.1·Setup·设置
 
-In our experiments, we leverage our [Encodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) (Defossez et al., 2022) speech tokenizer whose frame shift is 20ms and the sampling rate of output waveforms is 16k.
+In our experiments, we leverage our **EnCodec** (Defossez et al., 2022) speech tokenizer whose frame shift is 20ms and the sampling rate of output waveforms is 16k.
 It comprises 8 residual vector quantization (RVQ) indices for each frame.
-To ensure a fair comparison between [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) and out proposed model ***VALL-T***, we follow the approach introduced in [VALL-E (2023)](../SpeechLM/../SpeechLM/2023.01.05_VALL-E.md) that predicts the sequence of the first RVQ index with the auto-regressive models and then predicts the remaining 7 RVQ indices conditioned on the first RVQ index with a separate non-auto-regressive (NAR) model.
+To ensure a fair comparison between **VALL-E** and out proposed model ***VALL-T***, we follow the approach introduced in **VALL-E** that predicts the sequence of the first RVQ index with the auto-regressive models and then predicts the remaining 7 RVQ indices conditioned on the first RVQ index with a separate non-auto-regressive (NAR) model.
 Both the input and output sequences are encoded with BPE (Sennrich et al., 2016) algorithm to shorten sequence lengths and diminish GPU memory consumption.
-***VALL-T*** adopts an identical architecture to [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), containing 12 layers of Transformer blocks.
+***VALL-T*** adopts an identical architecture to **VALL-E**, containing 12 layers of Transformer blocks.
 Each block comprises 12 attention heads and has a hidden dimension of 1024.
 
 We use LibriTTS (Zen et al., 2019) dataset in our experiments, which is a multi-speaker transcribed English speech dataset.
@@ -221,28 +237,28 @@ In this section, we conduct an evaluation of our models on zero-shot TTS task.
 The task refers to synthesizing speech in the voices of unseen speakers given speech prompts and their corresponding transcriptions.
 Our test set uses a same test set as in (Du et al., 2024), containing 500 utterances and involving 37 speakers from the LibriTTS test set.
 Each speaker is assigned a specific speech prompt.
-Before assessing the performance of our models, we conduct speech resynthesis using our [Encodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) to evaluate the speech tokenizer.
+Before assessing the performance of our models, we conduct speech resynthesis using our **EnCodec** to evaluate the speech tokenizer.
 We also do an experiment named “NAR resynthesis”.
 In this experiment, we send the ground-truth first RVQ index to the NAR model for predicting the remaining 7 RVQ indices.
-Then, we convert all the 8 RVQ indices to waveform using the [Encodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) decoder.
+Then, we convert all the 8 RVQ indices to waveform using the **EnCodec** decoder.
 The purpose of the NAR resynthesis experiment is to demonstrate the performance degradation introduced by the NAR model, so we can better analyze the results of the entire pipelines, where the AR models are the primary focus of our paper.
 
 The baselines of this experiment include two models.
-One is the popular decoder-only TTS model [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) and another is the recently proposed TTS model with a modularized Transducer architecture called “Transduce and Speak” (Kim et al., 2023).
+One is the popular decoder-only TTS model **VALL-E** and another is the recently proposed TTS model with a modularized Transducer architecture called “Transduce and Speak” (Kim et al., 2023).
 The main evaluation metric in this paper is the word error rate (WER).
 In our evaluation process, we first synthesize speech for the test set, and then perform speech recognition using a well-known ASR model, Whisper1(Radford et al., 2023).
 The transcriptions obtained from the ASR model are then compared to the ground-truth input text to calculate the word error rate.
-Tab.01 shows that ***VALL-T*** attains significant lower WER than baselines, which is a 28.3% relative reduction when compared to [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) and is only 0.41 higher than NAR resynthesis, suggesting the robustness of ***VALL-T***.
+Tab.01 shows that ***VALL-T*** attains significant lower WER than baselines, which is a 28.3% relative reduction when compared to **VALL-E** and is only 0.41 higher than NAR resynthesis, suggesting the robustness of ***VALL-T***.
 
 Additionally, we present the mel-cepstral distortion (MCD) in the table, serving as a metric for quantifying the distance between the generated speech and the corresponding ground-truth recordings.
 ***VALL-T*** also achieves the lowest MCD across all models.
 Further evaluations extend to Mean Opinion Score (MOS) listening tests for naturalness and speaker similarity. 15 listeners were tasked with rating each utterance on a scale from 1 to 5, with higher scores indicating better naturalness and similarity.
 Note that the speaker similarity is evaluated between the generated speech and the provided speech prompt, not the corresponding ground-truth speech.
 This distinction arises from the variability in a speaker’s timbre across different utterances, and the goal is to emulate solely the timbre of the given prompt.
-In the listening tests, ***VALL-T*** achieves a naturalness score comparable to [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), with a slightly better speaker similarity.
+In the listening tests, ***VALL-T*** achieves a naturalness score comparable to **VALL-E**, with a slightly better speaker similarity.
 Finally, the evaluation extends to the calculation of Speaker Embedding Cosine Similarity (SECS), measured using a pretrained speaker verification model2.
 This metric measures the speaker similarity by assessing the cosine similarity between the speaker embeddings of the generated speech and the provided speech prompt.
-While ***VALL-T*** exhibits a marginally lower SECS value than [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), it still surpasses other models and does not detrimentally affect human perception according to the results of subjective listening tests on similarity.
+While ***VALL-T*** exhibits a marginally lower SECS value than **VALL-E**, it still surpasses other models and does not detrimentally affect human perception according to the results of subjective listening tests on similarity.
 
 ### 4.4·Leveraging Untranscribed Speech Prompts·利用未转录语音提示
 
@@ -251,10 +267,10 @@ In this experiment, we still use a same test set as in the previous section, exc
 One utterance is randomly chosen from the LibriTTS test set, and its phoneme transcription serves as the pseudo prompt transcription for generating all utterances in the test set.
 We compare the proposed approach with three baselines.
 The first baseline is generating with ***VALL-T*** but do not use any prompt transcription.
-The remaining two baselines use [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), one utilizing pseudo prompt transcriptions and the other using no prompt transcription.
+The remaining two baselines use **VALL-E**, one utilizing pseudo prompt transcriptions and the other using no prompt transcription.
 
 The results are presented in Tab.02.
-We find [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) consistently fails to perform continuation in the absence of the correct prompt transcription, regardless of whether pseudo prompt transcriptions are provided or not.
+We find **VALL-E** consistently fails to perform continuation in the absence of the correct prompt transcription, regardless of whether pseudo prompt transcriptions are provided or not.
 Although VALL- T exhibits improved robustness, it still fails in continuation tasks when no prompt transcription is used.
 This failure is caused by the unseen alignment pattern in the view of absolute position embeddings.
 When provided with pseudo prompt transcriptions, ***VALL-T*** successfully accomplishes the continuation from the speech prompt.
@@ -269,9 +285,9 @@ We can also observe that in SECS evaluation.
 
 Next, we extend the utilization of untranscribed speech prompts to those spoken in unknown languages.
 Specifically, we continue to use the same test set as in the previous experiments, but leverage speech prompts from 10 German and 10 Spanish speakers randomly selected from the Multilingual Librispeech dataset (Pratap et al., 2020), simulating the speech prompt in unknown languages.
-Employing the same English pseudo prompt transcription as in the previous experiment for both ***VALL-T*** and the baseline [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), we generate continuations from the speech prompts in German and Spanish.
+Employing the same English pseudo prompt transcription as in the previous experiment for both ***VALL-T*** and the baseline **VALL-E**, we generate continuations from the speech prompts in German and Spanish.
 The results are posted in Tab.03.
-[VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) continues to fail in the generation due to the unknown prompt transcription.
+**VALL-E** continues to fail in the generation due to the unknown prompt transcription.
 On the contrary, ***VALL-T*** still successfully performs the zero-shot TTS from the speech prompts in German and Spanish, achieving a WER of 4.22.
 Note that the similarity MOS and SECS in this experiment cannot be directly compared with the corresponding results in Tab.01 and 2 since the speakers of the speech prompts differ.
 We do not have corresponding ground-truth speech that speaks the utterances in the test set in the voice of German and Spanish speakers, so we also do not calculate the MCD in this experiment.
@@ -284,8 +300,8 @@ The test set for this experiment consists of 85 utterances, each formed by conca
 The generated speech in this test set exceeds 20 seconds.
 We use n = 50and m = 15 as the context window size.
 
-Examining the results in Tab.04, we observe that ***VALL-T*** exhibits superior generalization to long speech compared to [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), attributed to its utilization of relative position embedding, even in the absence of an aligned context window.
-In contrast, [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) often starts mumbling after generating approximately 20 seconds of speech and frequently terminates prematurely without completing the generation.
+Examining the results in Tab.04, we observe that ***VALL-T*** exhibits superior generalization to long speech compared to **VALL-E**, attributed to its utilization of relative position embedding, even in the absence of an aligned context window.
+In contrast, **VALL-E** often starts mumbling after generating approximately 20 seconds of speech and frequently terminates prematurely without completing the generation.
 Upon applying the aligned context window, the WER of ***VALL-T*** further decreases and approaches the result of generating normal utterances.
 Additionally, the gap in MOS scores for naturalness and speaker similarity between generated speech and ground-truth is also comparable to the result of synthesizing normal utterances.
 
