--- a/Models/SpeechLM/ST2S/2024.02.12_BASE-TTS.md
+++ b/Models/SpeechLM/ST2S/2024.02.12_BASE-TTS.md
@@ -54,16 +54,16 @@ In NLP, tasks such as question answering, sentiment analysis and text summarizat
 In CV, pre-trained models that learn from hundreds of millions of image-caption pairs have achieved top performance on image-to-text benchmarks \cite{clip1,tejankar2021fistful,shen2022k}, while delivering remarkably photo-realistic results in text-to-image tasks \cite{rombach2022high, ramesh2022hierarchical, nichol2022glide, saharia2022photorealistic, yu2022scaling}.
 This progress has been enabled by Transformer-based architectures \cite{originaltransformerpaper} that drive improvements using many orders of magnitude more data than previous models.
 Similar advances are now occurring in Speech Processing and Text-to-Speech (TTS), with models leveraging thousands of hours of data that push synthesis ever closer towards human-like speech.
-Some of these models, described in depth in Section \ref{sec:related_work}, rely on causal language modeling tasks, like [AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md) or [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md), whereas others use non-causal modules, such as [SoundStrom [18]](../SpeechLM/2023.05.16_SoundStorm.md) or [SpeechX [19]](../SpeechLM/2023.08.14_SpeechX.md), or diffusion decoders ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md)).
+Some of these models, described in depth in Section \ref{sec:related_work}, rely on causal language modeling tasks, like **AudioLM**[^16] or **VALL-E**[^17], whereas others use non-causal modules, such as **SoundStorm**[^18] or **SpeechX**[^19], or diffusion decoders (**NaturalSpeech2**[^20]; **TortoiseTTS**[^21]).
 
-Until 2022, leading Neural TTS models were almost exclusively trained on a few hundreds of hours of recorded audio ([Tacotron2 [22]](../Acoustic/2017.12.16_Tacotron2.md); ecat, [VITS [24]](../../Models/E2E/2021.06.11_VITS.md); DBLP:conf/iclr/0006H0QZZL21; [Grad-TTS [26]](../Acoustic/2021.05.13_Grad-TTS.md)).
+Until 2022, leading Neural TTS models were almost exclusively trained on a few hundreds of hours of recorded audio (**Tacotron2**[^22]; ecat, **VITS**[^24]; DBLP:conf/iclr/0006H0QZZL21; **Grad-TTS**[^26]).
 Such systems can create well-enunciated speech that is occasionally expressive for the target speakers, but typically cannot generalize beyond the small amount of training data to render ambiguous and complex texts with truly expressive spoken performance \cite{triantafyllopoulos2023overview,tahon2018can,schnell2022controllability}.
 To achieve such higher levels of expressiveness, TTS systems historically had to rely on labeled datasets for specific speech phenomena; and even so, achieving human-like prosody for certain types of textual inputs has remained elusive \cite{tan2021survey}.
 For example, in English, compound nouns and questions are notoriously hard to render correctly without accurate syntactic parsing and semantic understanding \cite{kenter2020improvingprosodywithbert}.
 
 In this paper, we introduce ***BASE TTS***: Big Adaptive Streamable TTS with Emergent abilities.
-It is a multi-lingual and multi-speaker Large TTS (LTTS) system trained on around 100K (doubling previous high in [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md)) hours of public domain speech data.
-***BASE TTS*** follows the approach of casting TTS as a next-token-prediction problem ([AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md); [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md)), inspired by the success of LLMs.
+It is a multi-lingual and multi-speaker Large TTS (LTTS) system trained on around 100K (doubling previous high in **VALL-E**[^17]) hours of public domain speech data.
+***BASE TTS*** follows the approach of casting TTS as a next-token-prediction problem (**AudioLM**[^16]; **VALL-E**[^17]; **TortoiseTTS**[^21]), inspired by the success of LLMs.
 This approach is usually applied in combination with large amount of training data to achieve strong multi-lingual and multi-speaker capabilities (e.g.
 one-shot voice cloning).
 Our goal is to improve general TTS quality and study how scaling affects the model's ability to produce appropriate prosody and expression for challenging text inputs, similar to how LLMs acquire new abilities through data and parameter scaling, a phenomenon known as "emergence" or "emergent abilities" in the LLM literature \cite{wei2022emergent, webb2023emergent}. \cite{wei2022emergent} defines \textit{emergent abilities of large language models} as "abilities that are not present in smaller-scale models but are present in large-scale models;" for example, they show that on a range of few-shot tasks, model capability stays at a low level from 10\textsuperscript{18} to 10\textsuperscript{22} training FLOPs, but makes a drastic jump from 10\textsuperscript{22} to 10\textsuperscript{24}.
@@ -71,16 +71,16 @@ To test the hypothesis that this also holds for LTTS, we propose an evaluation s
 See more details in Section \ref{sec:evaluation}.
 
 We design ***BASE TTS*** to model a joint distribution of text tokens followed by discrete speech representations, which we refer to as speechcodes.
-Discretization of speech through audio codecs ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [SoundStream [35]](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec [36]](../SpeechCodec/2022.10.24_EnCodec.md)) is central to our design, as it enables the direct application of methods developed for LLMs, which underlie recent works on LTTS ([AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md); [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md); [SoundStrom [18]](../SpeechLM/2023.05.16_SoundStorm.md); [SpeechX [19]](../SpeechLM/2023.08.14_SpeechX.md); [NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md); kharitonov2023speak).
+Discretization of speech through audio codecs (**VQ-VAE**[^34]; **SoundStream**[^35]; **EnCodec**[^36]) is central to our design, as it enables the direct application of methods developed for LLMs, which underlie recent works on LTTS (**AudioLM**[^16]; **VALL-E**[^17]; **SoundStorm**[^18]; **SpeechX**[^19]; **NaturalSpeech2**[^20]; **TortoiseTTS**[^21]; kharitonov2023speak).
 Specifically, we model speechcodes using a decoder-only autoregressive Transformer with a cross-entropy training objective.
 Despite its simplicity, this objective can capture complex probability distributions of expressive speech, thus alleviating the oversmoothing problem seen in early neural TTS systems \cite{ren2022revisiting}.
 As an implicit language model, ***BASE TTS*** is also observed to make a qualitative jump in prosody rendering once a large enough variant is trained on sufficient data.
 
-Further, we propose speaker-disentangled speechcodes that are built on top of a [WavLM [39]](../SpeechRepresentation/2021.10.26_WavLM.md) Self-Supervised Learning (SSL) speech model.
-We follow [AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md) which introduces semantic tokens constructed by discretizing activations of an SSL model.
+Further, we propose speaker-disentangled speechcodes that are built on top of a **WavLM**[^39] Self-Supervised Learning (SSL) speech model.
+We follow **AudioLM**[^16] which introduces semantic tokens constructed by discretizing activations of an SSL model.
 We extend this approach to better control information captured by the speechcodes.
 Our strategy is to limit the responsibilities of the autoregressive speechcode predictor ("speechGPT") to segmental contents, prosody, and duration, while designating a separate, speechcode-to-waveform decoder (called "speechcode decoder") with the reconstruction of speaker identity and recording conditions.
-We show that this convolution-based speechcode decoder is compute-efficient and reduces the whole-system synthesis time by over 70\% compared to the baseline diffusion-based decoder.
+We show that this convolution-based speechcode decoder is compute-efficient and reduces the whole-system synthesis time by over 70% compared to the baseline diffusion-based decoder.
 
 Our main contributions are summarized as follows:
 
@@ -99,12 +99,12 @@ We also show that they can be decoded to high quality waveforms with a simple, f
 
 Casting TTS problem as next token prediction has gained popularity in recent years due to how easy it is to scale language models to large data and model sizes.
 
-The first model using this approach was [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md) released in 2022.
+The first model using this approach was **TortoiseTTS**[^21] released in 2022.
 It combines a GPT2-style speechcode language model with a diffusion decoder and an off-the-shelf vocoder, achieving remarkable few-shot capability.
-[VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md) followed a similar approach: the model is scaled to 60k hours of speech data and uses a pre-trained audio encoder EnCodec for speechcode extraction ([EnCodec [36]](../SpeechCodec/2022.10.24_EnCodec.md)).
-[VALL-E X [61]](../SpeechLM/2023.03.07_VALL-E_X.md) replicated VALL-E with 70k hours, with an additional cross-lingual speech-to-speech translation task in English and Chinese by using target language token as prompt.
+**VALL-E**[^17] followed a similar approach: the model is scaled to 60k hours of speech data and uses a pre-trained audio encoder EnCodec for speechcode extraction (**EnCodec**[^36]).
+**VALL-E X**[^61] replicated VALL-E with 70k hours, with an additional cross-lingual speech-to-speech translation task in English and Chinese by using target language token as prompt.
 VioLa \cite{wang2023viola} extended VALL-EX with both text-to-text translation and speech-to-text recognition tasks.
-[SpeechX [19]](../SpeechLM/2023.08.14_SpeechX.md) extended VALL-E by adding noise suppression, target speaker extraction, clean and noisy speech editing, and speech removal tasks.
+**SpeechX**[^19] extended VALL-E by adding noise suppression, target speaker extraction, clean and noisy speech editing, and speech removal tasks.
 
 While VALL-E X, VioLA and SpeechX are versatile models reporting improved performance on word error rate and speaker similarity, no effects on core TTS aspects such as naturalness or prosody improvement were reported.
 VALL-E reported significant improvements over industry baselines, but we are unable to compare as the model is not publicly available.
@@ -114,19 +114,19 @@ Qualitative linguistic analysis shows "emergent abilities" \cite{wei2022emergent
 
 ### Discrete Speech Representations
 
-In audio generative AI, the first acoustic encoders used in GPT-TTS are [VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md), [SoundStream [35]](../SpeechCodec/2021.07.07_SoundStream.md) and [EnCodec [36]](../SpeechCodec/2022.10.24_EnCodec.md), which are deep learning audio compression techniques producing discrete acoustic token based on vector quantization.
-These acoustic encoders are shown to be superior to Mel-spectrograms \cite{DBLP:journals/corr/abs-2309-10922, yang2023towards}, but ignore semantic information and are unnecessarily complex due to lack of disentanglement ([RepCodec [65]](../SpeechCodec/2023.08.31_RepCodec.md)).
-[AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md) combines SoundStream tokens with semantic BERT tokens \cite{chung2021w2v}.
-[SpeechTokenizer [67]](../../Models/SpeechCodec/2023.08.31_SpeechTokenizer.md) and [RepCodec [65]](../SpeechCodec/2023.08.31_RepCodec.md) aim to capture semantics by adding self-supervised embedding prediction-based losses \cite{mohamed2022self}.
+In audio generative AI, the first acoustic encoders used in GPT-TTS are **VQ-VAE**[^34], **SoundStream**[^35] and **EnCodec**[^36], which are deep learning audio compression techniques producing discrete acoustic token based on vector quantization.
+These acoustic encoders are shown to be superior to Mel-spectrograms \cite{DBLP:journals/corr/abs-2309-10922, yang2023towards}, but ignore semantic information and are unnecessarily complex due to lack of disentanglement (**RepCodec**[^65]).
+**AudioLM**[^16] combines SoundStream tokens with semantic BERT tokens \cite{chung2021w2v}.
+**SpeechTokenizer**[^67] and **RepCodec**[^65] aim to capture semantics by adding self-supervised embedding prediction-based losses \cite{mohamed2022self}.
 ***BASE TTS*** builds acoustic tokens by leveraging semantic information from self-supervised embeddings and disentangling speaker information from the acoustic tokens.
 Then, it applies byte-pair encoding on these tokens to reduce memory requirement, allowing the model to train on longer sequences.
 
 ### LTTS Simplifies Modeling
 
-Since [Tacotron2 [22]](../Acoustic/2017.12.16_Tacotron2.md), a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and SSML tag handling e.g.
+Since **Tacotron2**[^22], a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and SSML tag handling e.g.
 to mark emphasis \cite{DBLP:journals/corr/abs-2307-07062}, (2) a Mel-spectrogram generator, inferring the amplitudes of the speech signal and responsible for the model expressivity, and (3) a dedicated Vocoder \cite{DBLP:conf/ssw/OordDZSVGKSK16, jiao2021universal}, generating the waveform by inferring the phase information.
 Expert knowledge can be induced to improve its performance such as using pre-computed features \cite{DBLP:conf/iclr/0006H0QZZL21}, coarse or fine-grained prosody information (\cite{Copycat}, and style control \cite{DBLP:conf/naacl/PrateekLBDLMRW19}.
-It has also proven successful with architectures such as Transformers \cite{li2019neural, DBLP:conf/iclr/0006H0QZZL21}, Flows （[VITS [24]](../../Models/E2E/2021.06.11_VITS.md)), and Diffusion ([Grad-TTS [26]](../Acoustic/2021.05.13_Grad-TTS.md)).
+It has also proven successful with architectures such as Transformers \cite{li2019neural, DBLP:conf/iclr/0006H0QZZL21}, Flows （**VITS**[^24]), and Diffusion (**Grad-TTS**[^26]).
 
 These systems require a complex pipeline.
 Any error made during an earlier stage is propagated to the next.
@@ -150,9 +150,9 @@ In this paper, we systemize an approach to produce and evaluate emergent context
 
 ### ***BASE TTS*** has Data Efficiency Built-In
 
-Low-resource TTS has focused on reducing the required amount of high quality training data through e.g. voice conversion [huybrechts2021low [88]](), data generation \cite{DBLP:conf/icassp/LajszczakPKBBJN22}, modeling techniques \cite{DBLP:journals/corr/abs-2307-07062}, or recording script optimizations \cite{shamsi2020tts}.
+Low-resource TTS has focused on reducing the required amount of high quality training data through e.g. voice conversion huybrechts2021low [^88], data generation \cite{DBLP:conf/icassp/LajszczakPKBBJN22}, modeling techniques \cite{DBLP:journals/corr/abs-2307-07062}, or recording script optimizations \cite{shamsi2020tts}.
 This stems from the early difficulty of ingesting a high volume of data from multiple speakers in potentially different styles or languages.
-A step up in that direction is zero-shot inference such as in [Bark](https://github.com/suno-ai/bark) and [YourTTS [60]](../../Models/E2E/2021.12.04_YourTTS.md), [AdaSpeech4 [91]](../Acoustic/2022.04.01_AdaSpeech4.md), which aim to clone a voice with only a few seconds of recordings.
+A step up in that direction is zero-shot inference such as in [Bark](https://github.com/suno-ai/bark) and **YourTTS**[^60], **AdaSpeech4**[^91], which aim to clone a voice with only a few seconds of recordings.
 Due to leveraging a substantially larger dataset, a bigger model, and a dedicated speaker encoder, ***BASE TTS*** and the recent LTTS models set a new standard in data efficiency.
 
 ## 3·Methodology: 方法
@@ -173,14 +173,14 @@ The predicted speech tokens are concatenated with speaker embeddings and decoded
 ### 3.2·Discrete Speech Representations: 离散语音表示
 
 Discrete representation is foundational to the success of LLM, but identifying a compact and informative representation is less obvious in speech than in text, and less explored.
-For ***BASE TTS***, we first experiment with a [Vector Quantized Variational Autoencoder (VQ-VAE) [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md) baseline, where an auto-encoder based architecture reconstructs mel-spectrograms through a discrete bottleneck, as described in Section \ref{sec:vqvae}.
-VQ-VAE has been a successful paradigm in speech and image representation, and especially as a unit of modeling for TTS ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md)).
+For ***BASE TTS***, we first experiment with a **Vector Quantized Variational Autoencoder (VQ-VAE)**[^34] baseline, where an auto-encoder based architecture reconstructs mel-spectrograms through a discrete bottleneck, as described in Section \ref{sec:vqvae}.
+VQ-VAE has been a successful paradigm in speech and image representation, and especially as a unit of modeling for TTS (**VQ-VAE**[^34]; **TortoiseTTS**[^21]).
 
 In Section \ref{sec:wavlm}, however, we introduce a novel method of learning speech representations through WavLM-based speechcodes.
 In this method, we discretize features extracted from a WavLM SSL model to reconstruct a mel-spectrogram.
-We apply additional loss functions to promote speaker disentanglement, and compress the resulting speechcodes using [Byte-Pair Encoding (BPE)](../_Basis/2015.08.31_BPE.md) to reduce sequence length, enabling us to model longer audio with Transformers.
+We apply additional loss functions to promote speaker disentanglement, and compress the resulting speechcodes using **Byte-Pair Encoding (BPE)** to reduce sequence length, enabling us to model longer audio with Transformers.
 
-Both representations are compressed (325 bits/s and 400 bits/s respectively) to allow more efficient autoregressive modeling compared to popular audio codecs (e.g. 6k bits/s in [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md)).
+Both representations are compressed (325 bits/s and 400 bits/s respectively) to allow more efficient autoregressive modeling compared to popular audio codecs (e.g. 6k bits/s in **VALL-E**[^17]).
 With this level of compression, we aim to remove information from speechcodes that can be reconstructed during decoding (speaker, audio noise, etc.) to ensure that the capacity in speechcodes is primarily dedicated to encoding phonetic and prosodic information.
 
 #### 3.2.1·Autoencoder-Based Speech Tokens
@@ -196,7 +196,7 @@ This motivates us to develop representations with improved speaker disentangleme
 #### 3.2.2·WavLM-Based Speechcodes
 
 We aim to develop speechcodes that contain phonetic and prosodic information, but which are disentangled from speaker identity, recording conditions, and other spurious features in the audio signal.
-To this end, we introduce a speech tokenizer based on features extracted from a pretrained [WavLM [39]](../SpeechRepresentation/2021.10.26_WavLM.md) model, further trained with losses that encourage disentangling the speaker identity.
+To this end, we introduce a speech tokenizer based on features extracted from a pretrained **WavLM**[^39] model, further trained with losses that encourage disentangling the speaker identity.
 Our approach similar to the one introduced in \cite{martíncortinas2024enhancing} with modifications that reduce bitrate of the codes.
 The overall architecture of the speech tokenizer is shown in \cref{fig:wavlm-based}.
 
@@ -226,7 +226,7 @@ $$
 #### 3.2.3·Byte-Pair Encoding on Speechcodes
 
 The WavLM-based speech representations are learned at a frequency of 50 Hz to ensure that they offer enough resolution in time to be able to discriminate between single phonemes even in fast-paced speech (the average length of English phonemes tends not to dip below 20ms \cite{kuwabara1996acoustic}).
-We apply [Byte-Pair Encoding ](../_Basis/2015.08.31_BPE.md) to reduce the average sequence length of speechcodes by around 40\%, in order to mitigate the quadratic memory increases in Transformers sequence length and minimize complexity for the autoregressive model.
+We apply **Byte-Pair Encoding** to reduce the average sequence length of speechcodes by around 40%, in order to mitigate the quadratic memory increases in Transformers sequence length and minimize complexity for the autoregressive model.
 Similar to the BPE of texts, we iteratively join the most frequent pairs of speechcodes into new tokens and add them to the vocabulary until a pre-determined vocabulary size is reached.
 
 ### 3.3·Autoregressive Speech Modeling (SpeechGPT)
@@ -243,9 +243,9 @@ We apply a lower weight to this text loss compared to the speech loss.
 
 ### 3.4·Waveform Generation
 
-Our baseline uses a diffusion-based spectrogram decoder and a separately trained UnivNet \cite{univnet} vocoder, as proposed in [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md).
+Our baseline uses a diffusion-based spectrogram decoder and a separately trained UnivNet \cite{univnet} vocoder, as proposed in **TortoiseTTS**[^21].
 Diffusion-based TTS decoding can generate high-quality speech, but it suffers from slow inference and cannot generate samples incrementally - This lack of streamabilility forces us to obtain the audio output for the entire sequence in one go.
-Furthermore, the diffusion model in [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md) predicts spectrograms, and requires a separately trained vocoder to generate audio, complicating the training and inference pipeline.
+Furthermore, the diffusion model in **TortoiseTTS**[^21] predicts spectrograms, and requires a separately trained vocoder to generate audio, complicating the training and inference pipeline.
 
 Our proposed decoder, inspired by \cite{ecat}, is trained in an end-to-end fashion to predict waveforms.
 Our variant uses speechcodes as an input to the model instead of phoneme encodings and prosody latents.
@@ -256,7 +256,7 @@ We call our proposed system a "speechcode decoder" and depict it in \cref{fig:sc
 In addition to simplifying the overall system, we hypothesize that training the decoder and vocoder end-to-end yields higher-quality speech.
 
 In practice, instead of speechcodes, the speechcode decoder takes as an input the last hidden state of the autoregressive Transformer.
-We do so because the dense latent representation provides much richer information than a single speechcode, following [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md).
+We do so because the dense latent representation provides much richer information than a single speechcode, following **TortoiseTTS**[^21].
 During training, we feed the text and target codes to the trained SpeechGPT (with parameters frozen) and then condition the decoder on the last hidden state.
 Feeding the last hidden states of SpeechGPT helps improving the segmental and acoustic quality of speech, but also couples the decoder to a specific version of SpeechGPT.
 This complicates experimentation because it forces the two components to be always built sequentially.
@@ -275,7 +275,7 @@ We also report the quality of speech comparison against other open-source text-t
 
 In order to test our hypothesis that abilities emerge with the scale of data, we set out to train with the largest speech dataset for our largest LTTS model.
 We create a dataset consisting of 100K hours of unlabeled, public domain speech data.
-The overall dataset is dominated by English data (over 90\%), followed by German, Dutch, Spanish.
+The overall dataset is dominated by English data (over 90%), followed by German, Dutch, Spanish.
 We first download mp3 files from the Web, and resample them into 24 kHz mono LPCM files, with 16 bits per sample encoded as signed-integers.
 The vast majority of the dataset is recorded in non-studio conditions and contain noises, and we avoid additional signal processing or denoising in order to test our model's ability to generate clean speech from noisy background data.
 
@@ -287,10 +287,10 @@ We thus expose ***BASE TTS*** to speech segments which are between 0 and 40 seco
 To generate the transcript for the dataset, we initially relied on the ASR transcription.
 We found that ASR tends to generate a smaller set of punctuations than their natural occurrences.
 For example, it over-generates commas instead of colons and semicolons, and rarely generates parenthesis.
-We then perform partial text restoration (similar to [Libriheavy [56]](../../Datasets/2023.09.15_Libriheavy.md)) by:
+We then perform partial text restoration (similar to **Libriheavy**[^56] by:
 1) searching for source texts from the Internet and tying them to each recording;
 2) matching the ASR transcript with the source text sentence by sentence, replacing the former with latter if their difference is small enough (length no longer/shorter by a factor of 3 and within a certain edit distance).
-We restore around 1/2 of total texts to the `original`, resulting in an 300\% increase in quotation marks of all kinds and 20000\% increase in parentheses in the transcript.
+We restore around 1/2 of total texts to the `original`, resulting in an 300% increase in quotation marks of all kinds and 20000% increase in parentheses in the transcript.
 This led to our models no longer having frequent acoustic artefacts on parentheses and other `rare' punctuations.
 
 ### 4.2·Training & Hyperparameters: 训练和超参数
@@ -303,7 +303,7 @@ First, we train two speech tokenizer variants: a VQ-VAE tokenizer as in Section 
 Due to the overwhelming presence of English data, we train both variants on a subset of the data in Section \ref{dataset} by keeping all data from non-English languages, but capping the amount of speech from individual English speakers at 200 hours - excess data from the speaker are randomly discarded.
 We use a codebook size of 256 for the WavLM speechcodes and 8196 for the VQ-VAE ones.
 The WavLM speechcodes are subsequently compressed with the BPE algorithm and a vocabulary of size 8192.
-We first optimize the reconstruction loss on ground truth spectrograms, sanity-checking the reconstructed audio on "minority" languages such as Polish (0.2\% of total data) to ensure sufficient speechcode coverage.
+We first optimize the reconstruction loss on ground truth spectrograms, sanity-checking the reconstructed audio on "minority" languages such as Polish (0.2% of total data) to ensure sufficient speechcode coverage.
 
 Second, we train SpeechGPT on the entire training dataset with random initial weights.
 The inputs to the model are: random reference speech segment from a speaker, text and corresponding target speech segments.
@@ -338,11 +338,11 @@ In Table \ref{table:emergent-abilities}, we present an example from each categor
 These sentences are designed to contain challenging tasks - parsing garden-path sentences \cite{garden-path}, placing phrasal stress on long-winded compound nouns \cite{syntax-prosody}, producing emotional or whispered speech, or producing the correct phonemes for foreign words like "qi" or punctuations like "@" - none of which ***BASE TTS*** is explicitly trained to perform.
 Our hypothesis is that as ***BASE TTS*** increases in model capacity and trains over more data, the model will start to acquire these abilities, following evidence that scaling in these dimensions begets qualitative ability jumps \cite{sparks, webb2023emergent, wei2022emergent}.
 We share the full testset in Appendix \ref{appendix:emergent}.
-- **Automated objective evaluations** to test TTS robustness, especially issues with missed, duplicated or hallucinated synthesis ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)), and speaker similarity.
+- **Automated objective evaluations** to test TTS robustness, especially issues with missed, duplicated or hallucinated synthesis (**NaturalSpeech2**[^20]), and speaker similarity.
 We use an ASR model to compute the Word Error Rate (WER) by comparing the testset text (ground truth) against the ASR output from the synthetic speech.
-In addition, we employ a [speaker verification model](https://huggingface.co/microsoft/wavlm-base-plus-sv) fine-tuned on [WavLM [39]](../SpeechRepresentation/2021.10.26_WavLM.md) features to obtain speaker embeddings from the original recordings and synthetic speech, and then we compute the cosine distance between them to get a speaker similarity metric (SIM).
+In addition, we employ a [speaker verification model](https://huggingface.co/microsoft/wavlm-base-plus-sv) fine-tuned on **WavLM**[^39] features to obtain speaker embeddings from the original recordings and synthetic speech, and then we compute the cosine distance between them to get a speaker similarity metric (SIM).
 
-For subjective evaluations, we report average MUSHRA scores with $95\%$ confidence intervals.
+For subjective evaluations, we report average MUSHRA scores with $95%$ confidence intervals.
 Furthermore, to determine the significance of differences between two systems, we conduct a t-test; if the p-value is $< 0.05$, we consider the difference significant.
 To aid visualization we mark statistically significantly better systems with bold.
 
@@ -353,7 +353,7 @@ To aid visualization we mark statistically significantly better systems with bol
 We conduct MUSHRA evaluations on 6 US English and 4 Spanish (Castilian and US) speakers in order to test comprehensively the quality and generalisability of the two speech tokenization approaches, using both held-out test data for speakers seen in the training ("seen" condition) and unseen speakers ("one-shot" condition).
 In terms of average MUSHRA scores for English voices, VQ-VAE and WavLM based system are on par (VQ-VAE: 74.8 vs WavLM: 74.7, the difference is statistically non-significant).
 However, for Spanish voices, WavLM based model outperforms the VQ-VAE one (VQ-VAE: 73.3 vs WavLM: 74.7) in a statistically significant way.
-Note that English data comprises around 90\% of our dataset, while Spanish data only 2\%.
+Note that English data comprises around 90% of our dataset, while Spanish data only 2%.
 We hypothesize that speechcode improvements are more critical for low-resource languages while sheer data volume can make up for imperfect representations.
 Further verification of this hypothesis needs to be addressed in future work.
 Since WavLM-based system performs at least as well or better as the VQ-VAE baseline, we use it to represent ***BASE TTS*** in further experiments.
@@ -389,9 +389,9 @@ Examining results category by category, we observe that Emotions and Paralinguis
 By contrast, BASE-medium can perform close to ceiling on English Compound Nouns, while trailing BASE-large slightly in most of the other categories (Foreign Words, Punctuations, Questions, Syntactic Complexity).
 We remain hopeful that further scaling and injection of textual knowledge from text-only LLM can help us close remaining performance gaps.
 
-### 5.4.***BASE TTS*** vs. industry baselines
+### 5.4·BASE TTS vs industry baselines
 
-We select three industry baselines with publicly available pre-trained models: [YourTTS [60]](../../Models/E2E/2021.12.04_YourTTS.md), Bark\footnote{\url{https://github.com/suno-ai/bark}}, and [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md).
+We select three industry baselines with publicly available pre-trained models: **YourTTS**[^60], Bark\footnote{\url{https://github.com/suno-ai/bark}}, and **TortoiseTTS**[^21].
 We conduct the comparison exclusively in one-shot setting, using 10-second reference clip for two US English speakers which ***BASE TTS*** was not previously trained or evaluated on.
 
 As seen in Table \ref{competitor-mushra}, ***BASE TTS*** obtains significantly higher naturalness scores in MUSHRA than baseline systems, among two US English speakers tested.
@@ -400,7 +400,7 @@ We further conduct objective evaluation on WER and speaker similarity on 10 spea
 Overall, ***BASE TTS*** produces the most natural speech, the least amount of misalignment with input text, and the most similar speech to the reference speaker, followed relatively closely by Tortoise on naturalness and WER.
 Bark and YourTTS perform far worse on naturalness and WER, although Bark is relatively close to ***BASE TTS*** in speaker similarity.
 
-### 5.5·Synthesis efficiency gain due to speechcode decoder
+### 5.5·Synthesis Efficiency Gain Due to Speechcode Decoder
 
 The speechcode decoder is capable of streaming, i.e.
 generating speech incrementally.
